tests/ui-nightly/transmute-mut-dst-not-frombytes.stderr
error[E0277]: the trait bound `Dst: FromBytes` is not satisfied
 --> tests/ui-nightly/transmute-mut-dst-not-frombytes.rs:22:38
  |
 22 | const DST_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
    |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `FromBytes` is not implemented for `Dst`
   --> tests/ui-nightly/transmute-mut-dst-not-frombytes.rs:19:1
    |
 19 | struct Dst;
    | ^^^^^^^^^^
    = note: Consider adding `#[derive(FromBytes)]` to `Dst`
    = help: the following other types implement trait `FromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and $N others
note: required by a bound in `zerocopy::util::macro_util::Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
   --> src/util/macro_util.rs
    |
    |     pub fn transmute_mut(self) -> &'a mut Dst
    |            ------------- required by a bound in this associated function
...
    |         Dst: FromBytes + IntoBytes,
    |              ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
    = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
